[gd_scene load_steps=9 format=3 uid="uid://chtv44kwjm53k"]

[ext_resource type="Script" path="res://scenes/enemys/mm_1/GutsManPlatform.gd" id="1_iipbj"]
[ext_resource type="Texture2D" uid="uid://bromejt8shhvy" path="res://assets/sprites/enemys/enemys_atlas/guts_man_platform.tres" id="2_hm2nj"]
[ext_resource type="AudioStream" uid="uid://big5hpfe4n0l" path="res://assets/audios/effetcs/conveyor_lift.wav" id="3_bnvh0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hpbs3"]
size = Vector2(32, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0pl3l"]
size = Vector2(8, 13)

[sub_resource type="Animation" id="Animation_01c8u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GutsManPlatform/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_6tdww"]
resource_name = "moving_platform"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GutsManPlatform/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pl2xr"]
_data = {
"RESET": SubResource("Animation_01c8u"),
"moving_platform": SubResource("Animation_6tdww")
}

[node name="GutsManPlatform" type="PathFollow2D"]
position = Vector2(1304, 120)
loop = false
script = ExtResource("1_iipbj")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(16, 2)
texture = ExtResource("2_hm2nj")
hframes = 3
region_rect = Rect2(141, 299, 37, 40)

[node name="PlatFormCollision" type="CharacterBody2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatFormCollision"]
position = Vector2(16, -8.5)
shape = SubResource("RectangleShape2D_hpbs3")
one_way_collision = true

[node name="PlatformAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_bnvh0")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(4, 1.5)
shape = SubResource("RectangleShape2D_0pl3l")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_pl2xr")
}

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(4, 0)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
